--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.myBody{
+    background-color: black;
+    margin-top: 105px;
+    padding: 50px 0;
+    color: white;
+}
